--- a/data/blog/test-deriving-ols-estimator.mdx
+++ b/data/blog/test-deriving-ols-estimator.mdx
@@ -1,5 +1,5 @@
 ---
-title: Deriving the OLS Estimator
+title: Test - Deriving the OLS Estimator
 date: '2020-12-21'
 tags: ['next js', 'math', 'ols']
 draft: false
