--- a/data/blog/test-the-time-machine.mdx
+++ b/data/blog/test-the-time-machine.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'The Time Machine'
+title: 'Test - The Time Machine'
 date: '2018-08-15'
 tags: ['writings', 'book', 'reflection']
 draft: false
